// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match the snapshot 1`] = `
<header>
  <h1>
    Robo Report
  </h1>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/myReports"
  >
    My Reports
  </NavLink>
  <button
    className="sign-in--button"
    onClick={[Function]}
  >
    Sign In
  </button>
</header>
`;

exports[`Header should match the snapshot 2`] = `
<header>
  <h1>
    Robo Report
  </h1>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/myReports"
  >
    My Reports
  </NavLink>
  <button
    className="sign-in--button"
    onClick={[Function]}
  >
    Sign Out
  </button>
</header>
`;
